--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -11,9 +11,11 @@
 @import "components/form";
 @import "components/map";
 @import "components/carousel";
+@import "components/dialog";
 
 @import "layout/footer";
 @import "layout/header";
+@import "layout/socials";
 @import "layout/navigation";
 
 @import "pages/about";
