--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,6 +2,9 @@
   --dark-navy: #020c1b;
   --logo-color: #e23c52;
   --error-color: #dc3545;
+  --grey: rgb(71, 82, 86);
+  --light-green: #01833c;
+  --lightest-green: #18A558;
   // --navy: #0a192f;
   // --navy: #002244;
   --navy: #002850;
