--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -3,10 +3,10 @@ nav {
   position: relative;
   height: 100%;
   width: 100%;
-  padding-right: 5rem;
+  margin-right: 5rem;
   color: var(--white);
   font-family: var(--font-mono);
-  z-index: 12;
+  z-index: 999;
 
   & .logo {
     @include flex_center;
