--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,24 +1,33 @@
 .section-contact {
-  padding: 15rem 0rem 7rem 12rem;
+  padding: 12rem 12rem 7rem 12rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.form-container {
+  align-self: stretch;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 3.6rem;
 }
 
 .contact {
   width: 100%;
   @include two_col_grid_section;
   grid-template-columns: 1fr 1fr;
-
   gap: 6.2rem;
 }
 
 .leaflet-container {
   z-index: 999;
   border-radius: 3px;
-  height: 70vh;
-  margin-top: -10rem;
-  width: 100%;
+  height: 50vh;
+
   overflow: hidden;
   opacity: 0.8;
 
@@ -44,4 +53,10 @@
 
 .leaflet-tile {
   filter: hue-rotate(35deg);
+}
+
+hr {
+  background-color: #6c757d;
+  height: 1px;
+  border: 0;
 }
