--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -1,8 +1,11 @@
 @include respond(tab-land-big) {
   .section-experience,
-  .section-hero,
   .section-about {
     padding: 10rem 10rem;
+  }
+
+  .section-hero {
+    padding: 10rem 14rem;
   }
 
   .experience__jobs-tab {
@@ -20,6 +23,10 @@
   .section-hero,
   .section-about {
     padding: 10rem 6rem;
+  }
+
+  .section-hero {
+    padding: 10rem 10rem;
   }
 
   .about__tags-box {
@@ -84,6 +91,10 @@
     }
   }
 
+  .contact {
+    row-gap: 3.6rem;
+  }
+
   .contact-form__group {
     padding: 0;
   }
@@ -96,8 +107,7 @@
     gap: 8.4rem;
   }
 
-  .about,
-  .contact {
+  .about {
     gap: 0;
   }
 
