--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -23,7 +23,7 @@
 
 .button-totop {
   background-color: transparent;
-  border: 1px solid var(--logo-color);
+  border: 1px solid rgb(189, 81, 92);
   border-radius: 50%;
   bottom: 30px;
   right: 30px;
@@ -37,7 +37,7 @@
 
   &:hover {
     cursor: pointer;
-    background-color: #333;
+    background-color: rgba(189, 81, 92, 0.3);
   }
 }
 
