--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -29,12 +29,12 @@ header {
 }
 
 .logo {
-  width: 20rem;
+  width: 17rem;
   height: 100%;
   // background-color: var(--dark-navy);
-  background-color: rgba(2, 12, 27, 0.4);
-  border-bottom-right-radius: 5px;
-  // margin: 2rem 0 0 1rem;
+  // background-color: rgba(2, 12, 27, 0.3);
+  border-bottom-right-radius: 15px;
+  margin: 0rem 0 0 0.5rem;
 
   & .flexRow {
     @include flex_center;
@@ -55,9 +55,9 @@ header {
 
   & .logoText {
     color: var(--logo-color);
-    text-shadow: -0.3rem -0.1rem 0px var(--green),
-      -0.4rem -0.1rem 0px var(--green);
-    font-size: 6.5rem;
+    text-shadow: -0.3rem -0.1rem 0px var(--logo-shadow),
+      -0.4rem -0.1rem 0px var(--logo-shadow);
+    font-size: 6rem;
     font-weight: 600;
     justify-self: center;
     transition: all 0.2s ease-out;
