--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -79,7 +79,7 @@
   }
 
   & .project-image {
-    background-color: var(--lightest-navy-rgba);
+    background-color: var(--navy-shadow);
     box-shadow: 0.4rem 0.8rem 1.6rem rgba(0, 0, 0, 0.3);
     height: 100%;
     width: 100%;
@@ -160,3 +160,5 @@
     }
   }
 }
+
+@include carousel_css(360px, 300px);
