--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -18,7 +18,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
 */
 :root {
   --dark-navy: rgb(2, 12, 27);
-  --logo-color: #e23c52;
+  --logo-color: #175873;
+  --logo-shadow: #08fdd8;
   --error-color: #dc3545;
   --grey: rgb(71, 82, 86);
   --light-green: #01833c;
@@ -28,13 +29,14 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --lightest-navy: #233554;
   --dark-navy_rgba: rgba(2, 12, 27, 0.5);
   --lightest-navy-rgba: rgba(35, 53, 84, 0.5);
-  --navy-shadow: rgba(2, 12, 27, 0.7);
+  --navy-shadow: rgba(2, 12, 27, 0.6);
   --dark-slate: #495670;
   --slate: #8892b0;
   --light-slate: #a8b2d1;
   --lightest-slate: rgb(204, 214, 246);
-  --lightest-slate-rgba: rgba(204, 214, 246, 0.85);
+  --lightest-slate-rgba: rgba(204, 214, 246, 0.7);
   --white: #e6f1ff;
+  --green-light: #64ffda;
   --green: #08fdd8;
   --green-tint: rgba(100, 255, 218, 0.1);
   --main-fonts: "Calibre", "Open Sans", sans-serif;
@@ -511,7 +513,7 @@ body {
 
 .button-totop {
   background-color: transparent;
-  border: 1px solid var(--logo-color);
+  border: 1px solid rgb(189, 81, 92);
   border-radius: 50%;
   bottom: 30px;
   right: 30px;
@@ -525,7 +527,7 @@ body {
 }
 .button-totop:hover {
   cursor: pointer;
-  background-color: #333;
+  background-color: rgba(189, 81, 92, 0.3);
 }
 
 .flex-button {
@@ -647,42 +649,6 @@ body {
   color: var(--lightest-slate);
 }
 
-.carousel-root {
-  height: 360px !important;
-}
-.carousel-root .carousel-slider {
-  height: 100%;
-}
-.carousel-root .slider-wrapper {
-  height: 360px !important;
-  overflow: hidden;
-}
-.carousel-root .slider-wrapper .slider {
-  height: 360px !important;
-}
-.carousel-root .control-dots {
-  margin-bottom: 0 !important;
-}
-.carousel-root .control-dots .dot {
-  background: var(--green) !important;
-}
-.carousel-root .carousel .slide .legend {
-  display: none !important;
-}
-.carousel-root .carousel .slide img {
-  max-height: auto;
-  min-height: 200px;
-  max-width: 100%;
-  min-width: 70%;
-  justify-self: center;
-}
-.carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide {
-  max-height: 360px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .footer {
   padding: 2rem 0;
   display: flex;
@@ -738,10 +704,10 @@ header .scroll-down {
 }
 
 .logo {
-  width: 20rem;
+  width: 17rem;
   height: 100%;
-  background-color: rgba(2, 12, 27, 0.4);
-  border-bottom-right-radius: 5px;
+  border-bottom-right-radius: 15px;
+  margin: 0rem 0 0 0.5rem;
 }
 .logo .flexRow {
   display: flex;
@@ -761,8 +727,8 @@ header .scroll-down {
 }
 .logo .logoText {
   color: var(--logo-color);
-  text-shadow: -0.3rem -0.1rem 0px var(--green), -0.4rem -0.1rem 0px var(--green);
-  font-size: 6.5rem;
+  text-shadow: -0.3rem -0.1rem 0px var(--logo-shadow), -0.4rem -0.1rem 0px var(--logo-shadow);
+  font-size: 6rem;
   font-weight: 600;
   justify-self: center;
   transition: all 0.2s ease-out;
@@ -892,7 +858,7 @@ nav .nav--links .resume-button {
 }
 
 .section-about {
-  padding: 10rem 15rem 10rem 22rem;
+  padding: 10rem 15rem 15rem 22rem;
 }
 
 .about {
@@ -1022,7 +988,7 @@ nav .nav--links .resume-button {
   width: 0;
 }
 .project-container .project-image {
-  background-color: var(--lightest-navy-rgba);
+  background-color: var(--navy-shadow);
   box-shadow: 0.4rem 0.8rem 1.6rem rgba(0, 0, 0, 0.3);
   height: 100%;
   width: 100%;
@@ -1098,6 +1064,42 @@ nav .nav--links .resume-button {
   grid-area: 1/1/3/2;
 }
 
+.carousel-root {
+  height: 360px !important;
+}
+.carousel-root .carousel-slider {
+  height: 100%;
+}
+.carousel-root .slider-wrapper {
+  height: 360px !important;
+  overflow: hidden;
+}
+.carousel-root .slider-wrapper .slider {
+  height: 360px !important;
+}
+.carousel-root .control-dots {
+  margin-bottom: 0 !important;
+}
+.carousel-root .control-dots .dot {
+  background: var(--green) !important;
+}
+.carousel-root .carousel .slide .legend {
+  display: none !important;
+}
+.carousel-root .carousel .slide img {
+  max-height: 94%;
+  min-height: 300px;
+  max-width: 96%;
+  min-width: 70%;
+  justify-self: center;
+}
+.carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide {
+  max-height: 360px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .section-hero {
   padding: 10rem 22rem;
   min-height: 100vh;
@@ -1169,7 +1171,7 @@ nav .nav--links .resume-button {
 }
 .section-experience {
   padding: 10rem 22rem;
-  min-height: 80vh;
+  min-height: 60vh;
   max-height: 80vh;
 }
 
@@ -1358,13 +1360,11 @@ leaflet-popup-content-wrapper,
   .section-experience,
 .section-hero,
 .section-about,
-.section-projects,
 .section-contact {
     padding: 10rem 10rem;
   }
-  .section-experience {
-    min-height: 90vh;
-    max-height: 90vh;
+  .section-projects {
+    padding: 10rem 15rem;
   }
   .experience__jobs-tab {
     min-width: 100%;
@@ -1386,14 +1386,23 @@ leaflet-popup-content-wrapper,
   .hero__tags-box,
 .about__tags-box,
 .contact__tags-box {
-    margin-top: -5rem;
-    padding: 0 5rem;
+    margin-top: 0;
+    padding: 0 10rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .hero__tags-box canvas,
 .about__tags-box canvas,
 .contact__tags-box canvas {
     width: 100%;
     overflow: visible;
+  }
+  .hero .section-experience,
+.about .section-experience,
+.contact .section-experience {
+    min-height: 70vh;
+    max-height: 100vh;
   }
   .contact {
     row-gap: 3.6rem;
@@ -1410,23 +1419,74 @@ leaflet-popup-content-wrapper,
   .about {
     gap: 0;
   }
+  .project-container:nth-child(even) {
+    background-color: rgba(2, 12, 27, 0.7);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(18, 30px);
+  }
+  .project-container:nth-child(even) .carousel-root {
+    height: 300px !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel-slider {
+    height: 100%;
+  }
+  .project-container:nth-child(even) .carousel-root .slider-wrapper {
+    height: 300px !important;
+    overflow: hidden;
+  }
+  .project-container:nth-child(even) .carousel-root .slider-wrapper .slider {
+    height: 300px !important;
+  }
+  .project-container:nth-child(even) .carousel-root .control-dots {
+    margin-bottom: 0 !important;
+  }
+  .project-container:nth-child(even) .carousel-root .control-dots .dot {
+    background: var(--green) !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slide .legend {
+    display: none !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slide img {
+    max-height: 94%;
+    min-height: 300px;
+    max-width: 96%;
+    min-width: 70%;
+    justify-self: center;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide {
+    max-height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .project-container:nth-child(even) .carousel .slider-wrapper.axis-horizontal .slider .slide {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
   .project-container:nth-child(even) .project-image {
-    grid-area: 1/1/-1/-1;
+    grid-area: 3/1/13/-1;
   }
   .project-container:nth-child(even) .project-content {
-    background-color: rgba(2, 12, 27, 0.7);
+    box-shadow: none;
+    background-color: transparent;
+    align-self: stretch;
+    justify-content: start;
+    grid-area: 13/1/17/-1;
+  }
+  .project-container:nth-child(even) .project-content__description {
     padding: 1rem;
-    grid-area: 2/2/-1/12;
   }
   .project-container:nth-child(even) .project-title {
-    background-color: rgba(2, 12, 27, 0.5);
-    padding: 0.5rem;
-    grid-area: 2/2/2/-1;
+    margin-left: 1rem;
+    background-color: transparent;
     justify-self: start;
     display: flex;
     flex-direction: column;
-    align-items: start;
     z-index: 10;
+  }
+  .project-container:nth-child(even) .project-title__main {
+    font-size: var(--fonts-md);
   }
   .project-container:nth-child(even) .project-title__before {
     display: flex;
@@ -1434,7 +1494,8 @@ leaflet-popup-content-wrapper,
     align-items: center;
   }
   .project-container:nth-child(even) .project-tools {
-    grid-area: 11/2/-1/-1;
+    margin-bottom: 1rem;
+    grid-area: 18/1/-1/-1;
     color: var(--white);
     display: flex;
     justify-content: start;
@@ -1443,25 +1504,76 @@ leaflet-popup-content-wrapper,
   .project-container:nth-child(even) .project-anchors {
     z-index: 500;
     padding: 2rem 1.5rem 0 2rem;
-    grid-area: 1/12/2/-1;
+    grid-area: 1/11/1/-1;
+  }
+  .project-container:nth-child(odd) {
+    background-color: rgba(2, 12, 27, 0.7);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(18, 30px);
+  }
+  .project-container:nth-child(odd) .carousel-root {
+    height: 300px !important;
+  }
+  .project-container:nth-child(odd) .carousel-root .carousel-slider {
+    height: 100%;
+  }
+  .project-container:nth-child(odd) .carousel-root .slider-wrapper {
+    height: 300px !important;
+    overflow: hidden;
+  }
+  .project-container:nth-child(odd) .carousel-root .slider-wrapper .slider {
+    height: 300px !important;
+  }
+  .project-container:nth-child(odd) .carousel-root .control-dots {
+    margin-bottom: 0 !important;
+  }
+  .project-container:nth-child(odd) .carousel-root .control-dots .dot {
+    background: var(--green) !important;
+  }
+  .project-container:nth-child(odd) .carousel-root .carousel .slide .legend {
+    display: none !important;
+  }
+  .project-container:nth-child(odd) .carousel-root .carousel .slide img {
+    max-height: 94%;
+    min-height: 300px;
+    max-width: 96%;
+    min-width: 70%;
+    justify-self: center;
+  }
+  .project-container:nth-child(odd) .carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide {
+    max-height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .project-container:nth-child(odd) .carousel .slider-wrapper.axis-horizontal .slider .slide {
+    display: flex;
+    justify-content: start;
+    align-items: center;
   }
   .project-container:nth-child(odd) .project-image {
-    grid-area: 1/1/-1/-1;
+    grid-area: 3/1/13/-1;
   }
   .project-container:nth-child(odd) .project-content {
-    background-color: rgba(2, 12, 27, 0.7);
+    box-shadow: none;
+    background-color: transparent;
+    align-self: stretch;
+    justify-content: start;
+    grid-area: 13/1/17/-1;
+  }
+  .project-container:nth-child(odd) .project-content__description {
     padding: 1rem;
-    grid-area: 2/2/-1/12;
   }
   .project-container:nth-child(odd) .project-title {
-    background-color: rgba(2, 12, 27, 0.5);
-    padding: 0.5rem;
-    grid-area: 2/2/2/-1;
+    margin-left: 1rem;
+    background-color: transparent;
     justify-self: start;
     display: flex;
     flex-direction: column;
-    align-items: start;
     z-index: 10;
+  }
+  .project-container:nth-child(odd) .project-title__main {
+    font-size: var(--fonts-md);
   }
   .project-container:nth-child(odd) .project-title__before {
     display: flex;
@@ -1469,7 +1581,8 @@ leaflet-popup-content-wrapper,
     align-items: center;
   }
   .project-container:nth-child(odd) .project-tools {
-    grid-area: 11/2/-1/-1;
+    margin-bottom: 1rem;
+    grid-area: 18/1/-1/-1;
     color: var(--white);
     display: flex;
     justify-content: start;
@@ -1478,7 +1591,7 @@ leaflet-popup-content-wrapper,
   .project-container:nth-child(odd) .project-anchors {
     z-index: 500;
     padding: 2rem 1.5rem 0 2rem;
-    grid-area: 1/12/2/-1;
+    grid-area: 1/11/1/-1;
   }
 }
 @media only screen and (max-width: 48.25em) {
@@ -1489,23 +1602,61 @@ leaflet-popup-content-wrapper,
     padding: 10rem 6rem;
   }
   .about__tags-box {
-    margin-top: -4rem;
+    margin-top: 0;
+    padding: 0 5rem;
   }
 }
 @media only screen and (max-width: 37.5em) {
+  .project-container:nth-child(even), .project-container:nth-child(odd) {
+    grid-template-rows: repeat(18, 23px);
+  }
+  .project-container:nth-child(even) .carousel-root, .project-container:nth-child(odd) .carousel-root {
+    height: 230px !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel-slider, .project-container:nth-child(odd) .carousel-root .carousel-slider {
+    height: 100%;
+  }
+  .project-container:nth-child(even) .carousel-root .slider-wrapper, .project-container:nth-child(odd) .carousel-root .slider-wrapper {
+    height: 230px !important;
+    overflow: hidden;
+  }
+  .project-container:nth-child(even) .carousel-root .slider-wrapper .slider, .project-container:nth-child(odd) .carousel-root .slider-wrapper .slider {
+    height: 230px !important;
+  }
+  .project-container:nth-child(even) .carousel-root .control-dots, .project-container:nth-child(odd) .carousel-root .control-dots {
+    margin-bottom: 0 !important;
+  }
+  .project-container:nth-child(even) .carousel-root .control-dots .dot, .project-container:nth-child(odd) .carousel-root .control-dots .dot {
+    background: var(--green) !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slide .legend, .project-container:nth-child(odd) .carousel-root .carousel .slide .legend {
+    display: none !important;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slide img, .project-container:nth-child(odd) .carousel-root .carousel .slide img {
+    max-height: 94%;
+    min-height: 230px;
+    max-width: 96%;
+    min-width: 70%;
+    justify-self: center;
+  }
+  .project-container:nth-child(even) .carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide, .project-container:nth-child(odd) .carousel-root .carousel .slider-wrapper.axis-horizontal .slider .slide {
+    max-height: 230px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
   .section-experience,
 .section-hero,
-.section-about,
 .section-contact,
 .section-projects {
     padding: 10rem 4rem;
   }
-  .about__tags-box {
-    margin-top: 2rem;
+  .section-about {
+    padding: 10rem 4rem 4rem 4rem;
   }
-  .section-experience {
-    min-height: 100vh;
-    max-height: 100vh;
+  .about__tags-box {
+    margin-top: 6rem;
+    padding: 0 1rem;
   }
   .experience__jobs-tab {
     min-width: 100%;
@@ -1513,12 +1664,21 @@ leaflet-popup-content-wrapper,
   }
 }
 @media only screen and (max-width: 28em) {
-  .section-experience {
-    padding: 10rem 1rem;
-    min-height: 110vh;
-    max-height: 110vh;
+  .about__tags-box {
+    margin-top: -2rem;
+    padding: 0 0rem;
   }
   .section-projects {
     padding: 10rem 3rem;
+  }
+}
+@media only screen and (max-width: 595px) {
+  .MuiTabs-root {
+    min-width: 100% !important;
+    max-width: auto !important;
+    margin-bottom: 4rem;
+  }
+  .MuiBox-root {
+    padding: 0 0rem !important;
   }
 }/*# sourceMappingURL=style.css.map */
