--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -17,6 +17,7 @@
 @import "layout/header";
 @import "layout/socials";
 @import "layout/navigation";
+@import "layout/notFound";
 
 @import "pages/about";
 @import "pages/projects";
