--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -3,9 +3,9 @@
   --logo-color: #175873;
   --logo-shadow: #08fdd8;
   --error-color: #dc3545;
+  --not-found-shade: rgb(255, 195, 201);
   --grey: rgb(71, 82, 86);
-  --light-green: #01833c;
-  --lightest-green: #18A558;
+
   // --navy: #0a192f;
   // --navy: #002244;
   --navy: #002850;
@@ -22,6 +22,7 @@
   --white: #e6f1ff;
   --green-light: #64ffda;
   --green: #08fdd8;
+  --dark-green: #00dbba;
   --green-tint: rgba(100, 255, 218, 0.1);
 
   
