--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -80,7 +80,7 @@
 
   &:hover {
     transform: translateY(-3px);
-    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 80%);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.8);
 
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -93,7 +93,7 @@
   &:focus {
     outline: none;
     transform: translateY(-1px);
-    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 60%);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.6);
   }
 
   &::after {
