--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -60,6 +60,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --tab-width: 12rem;
   --cubanime: cubic-bezier(0.645, 0.045, 0.355, 1);
   --transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  --nav-scroll-height: 70px;
 }
 
 @-webkit-keyframes moveInLeft {
