Add login functionality and connect my app with firebase

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,7 +8,7 @@
 
   // --navy: #0a192f;
   // --navy: #002244;
-  --navy: #002850;
+  --navy: rgb(0, 40, 80);
   --light-navy: #112240;
   --lightest-navy: #233554;
   --dark-navy_rgba: rgba(2, 12, 27, 0.5);
