--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -24,5 +24,6 @@
 @import "pages/hero";
 @import "pages/experience";
 @import "pages/contact";
+@import "pages/login";
 
 @import "responsiveness/index";
