--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -23,7 +23,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --error-color: #dc3545;
   --not-found-shade: rgb(255, 195, 201);
   --grey: rgb(71, 82, 86);
-  --navy: #002850;
+  --navy: rgb(0, 40, 80);
   --light-navy: #112240;
   --lightest-navy: #233554;
   --dark-navy_rgba: rgba(2, 12, 27, 0.5);
@@ -1278,6 +1278,82 @@ leaflet-popup-content-wrapper,
   background-color: var(--navy);
 }
 
+.login-container {
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: 2fr 4fr;
+  box-shadow: 1rem 2rem 4rem rgba(0, 0, 0, 0.3);
+  z-index: 999;
+}
+.login-container .login-sidebar {
+  max-width: 250px;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(0, 40, 80);
+  padding: 1rem;
+  font-size: var(--fonts-xs);
+}
+.login-container .login-sidebar__flex {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.login-container .login-sidebar__flex .description {
+  text-align: center;
+  color: var(--lightest-slate);
+}
+.login-container .main-form {
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  background-color: var(--lightest-slate);
+  color: var(--dark-navy);
+  padding: 3rem;
+}
+.login-container .main-form__title {
+  margin-bottom: 5rem;
+  font-size: var(--fonts-lg);
+  font-weight: 550;
+}
+.login-container .main-form__input {
+  font-size: var(--fonts-sm) !important;
+}
+.login-container .main-form .login-button {
+  text-transform: uppercase;
+  width: 300px;
+  margin-bottom: 0rem;
+  padding: 2rem 4rem;
+  border-radius: 3px;
+  font-weight: 550;
+  -webkit-transition: all 0.2s;
+  transition: all 0.3s;
+  font-size: var(--fonts-xs);
+  background-color: var(--dark-slate);
+  color: var(--white);
+  box-shadow: 0.5rem 1rem 1rem rgba(0, 0, 0, 0.09);
+  border: none;
+  cursor: pointer;
+}
+.login-container .main-form .login-button:hover:not(:disabled) {
+  background-color: var(--navy);
+  transform: translateY(-2px);
+  box-shadow: 0.5rem 1rem 1rem rgba(0, 0, 0, 0.2);
+}
+.login-container .main-form .login-button:active:not(:disabled) {
+  outline: none;
+  transform: scale(0.97);
+}
+.login-container .main-form .login-button:disabled {
+  opacity: 0.6;
+  cursor: default;
+}
+
 @media only screen and (max-width: 100em) {
   .section-experience,
 .section-about {
@@ -1634,6 +1710,9 @@ leaflet-popup-content-wrapper,
     gap: 1rem;
     margin: 0 1rem;
   }
+  .login-container .main-form .login-button {
+    width: 200px;
+  }
 }
 @media only screen and (max-width: 28em) {
   .about__tags-box {
@@ -1703,6 +1782,16 @@ leaflet-popup-content-wrapper,
   }
   .MuiBox-root {
     padding: 0 0rem !important;
+  }
+}
+@media only screen and (max-width: 790px) {
+  .login-container {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 2fr;
+  }
+  .login-container .login-sidebar {
+    max-width: 100%;
+    height: auto;
   }
 }
 
