Feat: add dashboard page functionality

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -41,6 +41,7 @@
   --fonts-xl: 3.2rem;
   --fonts-xxl: 3.8rem;
   --fonts-xxxl: 4.6rem;
+  --fonts-xxxxl: 10.6rem;
   --fonts-big-heading: 5.4rem;
   --fonts-sub-heading: 3.6rem;
   --border-radius: 4px;
