--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,5 +25,6 @@
 @import "pages/experience";
 @import "pages/contact";
 @import "pages/login";
+@import "pages/dashboard";
 
 @import "responsiveness/index";
