--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,6 +52,7 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --fonts-xl: 3.2rem;
   --fonts-xxl: 3.8rem;
   --fonts-xxxl: 4.6rem;
+  --fonts-xxxxl: 10.6rem;
   --fonts-big-heading: 5.4rem;
   --fonts-sub-heading: 3.6rem;
   --border-radius: 4px;
@@ -1352,6 +1353,24 @@ leaflet-popup-content-wrapper,
 .login-container .main-form .login-button:disabled {
   opacity: 0.6;
   cursor: default;
+}
+
+.dash-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 4.8rem;
+  font-weight: 600;
+  line-height: 1.2;
+}
+.dash-container .card-title {
+  font-size: var(--fonts-xl);
+  color: var(--logo-color);
+}
+.dash-container .card-number {
+  font-size: var(--fonts-xxxxl);
+  color: var(--dark-slate);
 }
 
 @media only screen and (max-width: 100em) {
