--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -787,13 +787,19 @@ nav .nav--links ol li:before {
   font-size: var(--fonts-xxxs);
   text-align: right;
 }
-nav .nav--links .resume-button {
+nav .nav--links .resume-button,
+nav .nav--links .login-button-main {
   margin-top: 0.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 15px;
+  margin-left: 10px;
   font-size: var(--fonts-xs);
+}
+nav .nav--links .login-button-main {
+  margin-left: 30px;
+  border: 1px solid var(--not-found-shade);
+  color: var(--not-found-shade);
 }
 
 .not-found {
